--- a/fastfood-animation-copy.html
+++ b/fastfood-animation-copy.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "fastfood-animation-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "fastfood-animation-copy.css"], "outOfDate":[]};
 </script>
   
   <title>Космическая анимация</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation-copy.css?crc=4192435238" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation-copy.css?crc=139402343" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation-copy.css?crc=3852479518" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation-copy.css?crc=527921826" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -121,7 +121,7 @@ transform-origin: 50% 50%;
       <p class="shared_content" data-content-guid="u48555-4_0_content">Когда рендер финальной анимации был завершен, я приступил к наложение музыки и звуковых эффектов в Adobe Premiere Pro. Финальной результат можно увидеть в начале этой страницы.</p>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1703" data-content-above-spacer="1702" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer" data-offset-top="1703" data-content-above-spacer="1702" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu68303"><!-- group -->
      <div class="browser_width grpelem" id="u68303-bw">
       <div id="u68303"><!-- column -->
@@ -217,7 +217,7 @@ transform-origin: 50% 50%;
      <span class="clearfix colelem placeholder" data-placeholder-for="u48556-4_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u48555-4_content"><!-- placeholder node --></span>
     </div>
-    <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="1703" data-content-above-spacer="1702" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="browser_width grpelem temp_no_id" data-orig-id="u68303-bw">
      <div class="temp_no_id" data-orig-id="u68303"><!-- column -->
       <div class="clearfix temp_no_id" data-orig-id="u68303_align_to_page">
