--- a/fastfood-animation.html
+++ b/fastfood-animation.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "fastfood-animation.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "fastfood-animation.css"], "outOfDate":[]};
 </script>
   
   <title>Шевелю Фастфуд | Векторный бургер</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=123330591" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=329242363" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=3992240992" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=528181115" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -121,7 +121,7 @@ transform-origin: 50% 50%;
       <p class="shared_content" data-content-guid="u17366-4_0_content">После завершения предыдущего этапа, я рендерю данную композицию и закидываю отрендеренное на выходе видео в Premiere Pro. Там я добавляю на аудио дорожки различные звуковые эффекты, это можно сделать и в AE, но мне это удобнее делать в Premier. Конечный результат можно посмотреть в начале этого лонгрида.</p>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="3020" data-content-above-spacer="3019" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="3020" data-content-above-spacer="3019" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="clearfix grpelem" id="pu68303"><!-- group -->
      <div class="browser_width grpelem" id="u68303-bw">
       <div id="u68303"><!-- column -->
