--- a/skyeng-lp-copy.html
+++ b/skyeng-lp-copy.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp-copy.css"], "outOfDate":[]};
 </script>
   
   <title>Лендинг пейдж для School Trading</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/skyeng-lp-copy.css?crc=4085011196" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/skyeng-lp-copy.css?crc=3896497438" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp-copy.css?crc=4292791148" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp-copy.css?crc=3883917439" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -100,7 +100,7 @@ transform-origin: 50% 50%;
      </div>
      <div class="museBGSize shadow rounded-corners pics colelem shared_content" id="u54653" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u54653_content"><!-- simple frame --></div>
     </div>
-    <div class="verticalspacer" data-offset-top="1129" data-content-above-spacer="1128" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1129" data-content-above-spacer="1128" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem" id="pu68303"><!-- group -->
      <div class="browser_width grpelem" id="u68303-bw">
       <div id="u68303"><!-- column -->
