--- a/skyeng-lp.html
+++ b/skyeng-lp.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp.css"], "outOfDate":[]};
 </script>
   
   <title>Лендинг пейдж для Skyeng</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/skyeng-lp.css?crc=3958467159" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/skyeng-lp.css?crc=3976451152" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp.css?crc=3776458227" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp.css?crc=405969425" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -109,7 +109,7 @@ transform-origin: 50% 50%;
       <img class="block temp_no_img_src" id="u36467_img" data-orig-src="images/ezgif-1-ba9d34b22e.gif?crc=3948960212" alt="" width="560" height="394" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1757" data-content-above-spacer="1756" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1757" data-content-above-spacer="1756" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="clearfix grpelem" id="pu68303"><!-- group -->
      <div class="browser_width grpelem" id="u68303-bw">
       <div id="u68303"><!-- column -->
