--- a/webinar-st.html
+++ b/webinar-st.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "webinar-st.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "webinar-st.css"], "outOfDate":[]};
 </script>
   
   <title>Лендинг для School Trading | Вебинар</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/webinar-st.css?crc=293223067" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/webinar-st.css?crc=3786261283" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_webinar-st.css?crc=405767503" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_webinar-st.css?crc=4227564186" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
