--- a/book-ico.html
+++ b/book-ico.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "book-ico.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "book-ico.css"], "outOfDate":[]};
 </script>
   
   <title>Книга «Правила успешного инвестирования в ICO»</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=100255290"/>
-  <link rel="stylesheet" type="text/css" href="css/book-ico.css?crc=255226466" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
+  <link rel="stylesheet" type="text/css" href="css/book-ico.css?crc=4221794509" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=132420621"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_book-ico.css?crc=4291495421" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_book-ico.css?crc=495200346" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -105,7 +105,7 @@ transform-origin: 50% 50%;
       <img class="block temp_no_img_src" id="u38472_img" data-orig-src="images/book-pic2.jpg?crc=500582485" alt="" width="560" height="429" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="1540" data-content-above-spacer="1539" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="1540" data-content-above-spacer="1539" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <div class="clearfix grpelem" id="pu68303"><!-- group -->
      <div class="browser_width grpelem" id="u68303-bw">
       <div id="u68303"><!-- column -->
@@ -257,7 +257,7 @@ transform-origin: 50% 50%;
       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/book-pic2.jpg?crc=500582485" alt="" data-heightwidthratio="0.7660377358490567" data-image-width="530" data-image-height="406" data-orig-id="u38472_img" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1403" data-content-above-spacer="1403" data-content-below-spacer="2744" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1403" data-content-above-spacer="1403" data-content-below-spacer="2745" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu68303"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u68303-bw">
       <div class="temp_no_id" data-orig-id="u68303"><!-- column -->
