--- a/webinar-st/index.html
+++ b/webinar-st/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=328826168"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=90246522" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=458986974"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=346331595" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4099847478"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=4037259266" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=439678155" id="nomq_pagesheet"/>
   <![endif]-->
     <!--/*
 
@@ -120,17 +120,15 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width colelem shared_content" id="u104-bw" data-content-guid="u104-bw_content">
       <div id="u104"><!-- column -->
        <div class="clearfix" id="u104_align_to_page">
-        <div class="clearfix colelem" id="pu607"><!-- group -->
-         <div class="clearfix grpelem" id="u607"><!-- group -->
-          <div class="grpelem" id="u604" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- simple frame --></div>
-          <div class="clearfix grpelem shared_content" id="u133-6" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u133-6_content"><!-- content -->
-           <p>как я стала</p>
-           <p>трейдером</p>
+        <div class="clearfix colelem shared_content" id="u607" data-content-guid="u607_content"><!-- group -->
+         <div class="clearfix grpelem" id="u604"><!-- group -->
+          <div class="clearfix grpelem" id="u133-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
+           <p>как я стала трейдером</p>
           </div>
          </div>
-         <div class="shadow rounded-corners clip_frame grpelem shared_content" id="u610" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u610_content"><!-- image -->
-          <img class="block temp_no_img_src" id="u610_img" data-orig-src="images/%d1%82%d1%83%d0%bc%d0%b0%d0%bd%d0%be%d0%b2%d0%b0.jpg?crc=3876333847" alt="" width="100" height="100" src="images/blank.gif?crc=4208392903"/>
-         </div>
+        </div>
+        <div class="shadow rounded-corners clip_frame colelem shared_content" id="u610" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u610_content"><!-- image -->
+         <img class="block temp_no_img_src" id="u610_img" data-orig-src="images/%d1%82%d1%83%d0%bc%d0%b0%d0%bd%d0%be%d0%b2%d0%b0.jpg?crc=3876333847" alt="" width="100" height="100" src="images/blank.gif?crc=4208392903"/>
         </div>
         <div class="clearfix colelem" id="u134-12" data-sizePolicy="fixed" data-pintopage="page_fixedCenter"><!-- content -->
          <p class="shared_content" data-content-guid="u134-12_0_content">Свой первый счет я успешно слила. И опять же – я всегда во всех моментах ищу что-то хорошее, сдаваться – это не моё. Если это произошло сейчас – это очень хорошо, что только на старте мне было показано, как правильно работать на финансовых рынках – это действительно интеллектуальный труд, что на просто одном везении выехать невозможно.</p>
@@ -211,7 +209,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="museBGSize temp_no_id" data-orig-id="u103"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u103_align_to_page">
         <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="u431"><!-- image -->
-         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u431.png?crc=3792414979" alt="" width="394" height="644" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
+         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u431.png?crc=3815831606" alt="" width="394" height="644" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
         </div>
         <span class="clearfix grpelem placeholder" data-placeholder-for="u2560_content"><!-- placeholder node --></span>
         <span class="grpelem placeholder" data-placeholder-for="u407_content"><!-- placeholder node --></span>
@@ -294,7 +292,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="museBGSize temp_no_id" data-orig-id="u103"><!-- group -->
        <div class="clearfix temp_no_id" data-orig-id="u103_align_to_page">
         <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="u431"><!-- image -->
-         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4312.png?crc=3792414979" alt="" width="394" height="644" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
+         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4312.png?crc=3815831606" alt="" width="394" height="644" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
         </div>
         <span class="clearfix grpelem placeholder" data-placeholder-for="u2560_content"><!-- placeholder node --></span>
         <span class="grpelem placeholder" data-placeholder-for="u407_content"><!-- placeholder node --></span>
@@ -410,7 +408,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          </form>
         </div>
         <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="u431"><!-- image -->
-         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4313.png?crc=91840862" alt="" width="189" height="364" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
+         <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4313.png?crc=108298041" alt="" width="189" height="364" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
         </div>
        </div>
       </div>
@@ -427,11 +425,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width colelem temp_no_id" data-orig-id="u104-bw">
       <div class="temp_no_id" data-orig-id="u104"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u104_align_to_page">
-        <div class="clearfix colelem temp_no_id" data-orig-id="u607"><!-- group -->
-         <div class="clearfix grpelem temp_no_id" data-orig-id="u604"><!-- group -->
-          <span class="clearfix grpelem placeholder" data-placeholder-for="u133-6_content"><!-- placeholder node --></span>
-         </div>
-        </div>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u607_content"><!-- placeholder node --></span>
         <span class="shadow rounded-corners clip_frame colelem placeholder" data-placeholder-for="u610_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u134-12"><!-- content -->
          <span class="placeholder" data-placeholder-for="u134-12_0_content"><!-- placeholder node --></span>
@@ -495,7 +489,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <span class="clearfix colelem placeholder" data-placeholder-for="u2554_content"><!-- placeholder node --></span>
         <div class="clearfix colelem" id="pu431"><!-- group -->
          <div class="clip_frame grpelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedRight" data-orig-id="u431"><!-- image -->
-          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4314.png?crc=91840862" alt="" width="189" height="364" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
+          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/tumanova-crop-u4314.png?crc=108298041" alt="" width="189" height="364" data-orig-id="u431_img" src="images/blank.gif?crc=4208392903"/>
          </div>
          <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u111.php" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="widgetu111"><!-- none box -->
           <div class="fld-grp clearfix grpelem temp_no_id" data-required="true" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-orig-id="widgetu119"><!-- none box -->
@@ -536,11 +530,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width colelem temp_no_id" data-orig-id="u104-bw">
       <div class="temp_no_id" data-orig-id="u104"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u104_align_to_page">
-        <div class="clearfix colelem temp_no_id" data-orig-id="u607"><!-- group -->
-         <div class="clearfix grpelem temp_no_id" data-orig-id="u604"><!-- group -->
-          <span class="clearfix grpelem placeholder" data-placeholder-for="u133-6_content"><!-- placeholder node --></span>
-         </div>
-        </div>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u607_content"><!-- placeholder node --></span>
         <span class="shadow rounded-corners clip_frame colelem placeholder" data-placeholder-for="u610_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u134-12"><!-- content -->
          <span class="placeholder" data-placeholder-for="u134-12_0_content"><!-- placeholder node --></span>
@@ -657,11 +647,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="browser_width colelem temp_no_id" data-orig-id="u104-bw">
       <div class="temp_no_id" data-orig-id="u104"><!-- column -->
        <div class="clearfix temp_no_id" data-orig-id="u104_align_to_page">
-        <div class="clearfix colelem temp_no_id" data-orig-id="u607"><!-- group -->
-         <div class="clearfix grpelem temp_no_id" data-orig-id="u604"><!-- group -->
-          <span class="clearfix grpelem placeholder" data-placeholder-for="u133-6_content"><!-- placeholder node --></span>
-         </div>
-        </div>
+        <span class="clearfix colelem placeholder" data-placeholder-for="u607_content"><!-- placeholder node --></span>
         <span class="shadow rounded-corners clip_frame colelem placeholder" data-placeholder-for="u610_content"><!-- placeholder node --></span>
         <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u134-12"><!-- content -->
          <span class="placeholder" data-placeholder-for="u134-12_0_content"><!-- placeholder node --></span>
