--- a/skyeng-lp-copy.html
+++ b/skyeng-lp-copy.html
@@ -11,18 +11,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "jquery.watch.js", "jquery.musemenu.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp-copy.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "webpro.js", "musewpdisclosure.js", "jquery.museresponsive.js", "require.js", "skyeng-lp-copy.css"], "outOfDate":[]};
 </script>
   
   <title>Лендинг пейдж для School Trading</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3863469602"/>
-  <link rel="stylesheet" type="text/css" href="css/skyeng-lp-copy.css?crc=3896497438" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=9547637"/>
+  <link rel="stylesheet" type="text/css" href="css/skyeng-lp-copy.css?crc=3906724456" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=117269513"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp-copy.css?crc=3883917439" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=239425187"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_skyeng-lp-copy.css?crc=221581136" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -70,7 +70,7 @@ transform-origin: 50% 50%;
            <a class="nonblock nontext transition clip_frame grpelem shared_content" id="u68318" href="index.html" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="u68318_content"><!-- svg --><img class="svg temp_no_img_src" id="u68319" data-orig-src="images/logo-(2).svg?crc=315416931" width="114" height="40" alt="" data-mu-svgfallback="images/logo%20(2)_poster_.png?crc=158501887" src="images/blank.gif?crc=4208392903"/></a>
            <nav class="MenuBar clearfix grpelem" id="menuu68325" data-sizePolicy="fixed" data-pintopage="page_fixedRight"><!-- horizontal box -->
             <div class="MenuItemContainer clearfix grpelem" id="u68340"><!-- vertical box -->
-             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68343" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68344-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68344-4_0_content">Портфолио</p></div></a>
+             <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68343" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68344-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68344-4_0_content">Портфолио | Тимофей Малахов</p></div></a>
             </div>
             <div class="MenuItemContainer clearfix grpelem" id="u68333"><!-- vertical box -->
              <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u68336" href="about.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u68339-4" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- content --><p class="shared_content" data-content-guid="u68339-4_0_content">Обо мне</p></div></a>
@@ -222,7 +222,7 @@ transform-origin: 50% 50%;
          <div class="position_content temp_no_id" data-orig-id="u54651_position_content">
           <div class="clearfix colelem" id="paccordionu68348"><!-- group -->
            <ul class="AccordionWidget clearfix grpelem" id="accordionu68348" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- vertical box -->
-            <li class="AccordionPanel clearfix colelem" id="u68349"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u68350-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u68351"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu68352"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u68367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68368" href="index.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68370-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Портфолио</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u68353"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68354" href="about.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68356-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Обо мне</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u68360"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68363" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68364-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Контакты</p></div></a></div></nav></div></li>
+            <li class="AccordionPanel clearfix colelem" id="u68349"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem" id="u68350-3" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>&nbsp;</p></div><div class="AccordionPanelContent disn clearfix colelem" id="u68351"><!-- group --><nav class="MenuBar clearfix grpelem" id="menuu68352"><!-- vertical box --><div class="MenuItemContainer clearfix colelem" id="u68367"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68368" href="index.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68370-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Портфолио | Тимофей Малахов</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u68353"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68354" href="about.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68356-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Обо мне</p></div></a></div><div class="MenuItemContainer clearfix colelem" id="u68360"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u68363" href="contacts.html"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem" id="u68364-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>Контакты</p></div></a></div></nav></div></li>
            </ul>
            <div class="grpelem" id="u68324" data-sizePolicy="fluidWidth" data-pintopage="page_fixedLeft"><!-- simple frame --></div>
            <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u68318_content"><!-- placeholder node --></span>
